Second release source code
This version is setup for compilation with java 1.8 instead of 11 for improved compatibility. Minor changes to the codebase were made to make this possible.